// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiling to ReasonML should return a map of files 1`] = `
Object {
  "RootStyle.re": "[%bs.raw {|
  require(\\"./_reset.elo.css\\")
|}];

[%bs.raw {|
  require(\\"./RootStyleButton.elo.css\\")
|}];

[%bs.raw {|
  require(\\"./RootStyleLabel.elo.css\\")
|}];

open Css;

[@bs.deriving jsConverter]
type type_ =
  | Primary
  | Secondary;

[@bs.deriving jsConverter]
type mode =
  | Dark
  | Light
  | Semi;

let buttonStyle = (~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft) => style([unsafe(\\"border-width\\", borderWidth)]);
let getButtonStyleVariants = (~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft, ~type_, ~mode, ()) => {
    let buttonStylePrimary = style([unsafe(\\"padding-left\\", paddingLeft),
      hover([unsafe(\\"padding-right\\", paddingRight)])]);
    let buttonStylePrimaryDark = style([unsafe(\\"padding-left\\", padLeft)]);

switch (type_, mode) {
    | (Some(Primary), Some(Dark)) => [buttonStylePrimary,buttonStylePrimaryDark]
    | (Some(Primary), Some(Light)) => [buttonStylePrimary]
    | (Some(Primary), Some(Semi)) => [buttonStylePrimary]
    | (Some(Primary), None) => [buttonStylePrimary]
    | (Some(Secondary), Some(Dark)) => []
    | (Some(Secondary), Some(Light)) => []
    | (Some(Secondary), Some(Semi)) => []
    | (Some(Secondary), None) => []
    | (None, Some(Dark)) => []
    | (None, Some(Light)) => []
    | (None, Some(Semi)) => []
    | (None, None) => []
    }
  };

let getButtonVariants = (~type_, ~mode, ()) => {
  switch (type_, mode) {
    | (Some(Primary), Some(Dark)) => \\" _hxsbaq_0-0 _hxsbaq_1-0 _hxsbaq_0-0_1-0\\"
    | (Some(Primary), Some(Light)) => \\" _hxsbaq_0-0 _hxsbaq_1-1 _hxsbaq_0-0_1-1\\"
    | (Some(Primary), Some(Semi)) => \\" _hxsbaq_0-0 _hxsbaq_1-2 _hxsbaq_0-0_1-2\\"
    | (Some(Primary), None) => \\" _hxsbaq_0-0\\"
    | (Some(Secondary), Some(Dark)) => \\" _hxsbaq_0-1 _hxsbaq_1-0 _hxsbaq_0-1_1-0\\"
    | (Some(Secondary), Some(Light)) => \\" _hxsbaq_0-1 _hxsbaq_1-1 _hxsbaq_0-1_1-1\\"
    | (Some(Secondary), Some(Semi)) => \\"\\"
    | (Some(Secondary), None) => \\" _hxsbaq_0-1\\"
    | (None, Some(Dark)) => \\" _hxsbaq_1-0\\"
    | (None, Some(Light)) => \\" _hxsbaq_1-1\\"
    | (None, Some(Semi)) => \\" _hxsbaq_1-2\\"
    | (None, None) => \\"\\"
  }
};

let button = (~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft, ~type_=?, ~mode=?, ()) => \\"_elo_view _hxsbaq\\" ++ getButtonVariants(~type_, ~mode, ()) ++ \\" \\" ++ merge([buttonStyle(~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft), ...getButtonStyleVariants(~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft, ~type_, ~mode, ())]);

let labelStyle = (~lineHeight, ~fontSize, ~mediaFontSize, ~mediaHoverFontSize) => style([unsafe(\\"line-height\\", lineHeight),
    hover([unsafe(\\"font-size\\", fontSize)]),
    media(\\"(min-width: 320px) and (max-width: 320px)\\", [unsafe(\\"font-size\\", mediaFontSize),
hover([unsafe(\\"font-size\\", mediaHoverFontSize)])])]);
let getLabelVariants = (~mode, ()) => {
  switch (mode) {
    | (Some(Dark)) => \\"\\"
    | (Some(Light)) => \\" _87emqf_0-1\\"
    | (Some(Semi)) => \\"\\"
    | (None) => \\"\\"
  }
};

let label = (~lineHeight, ~fontSize, ~mediaFontSize, ~mediaHoverFontSize, ~mode=?, ()) => \\"_elo_text _87emqf\\" ++ getLabelVariants(~mode, ()) ++ \\" \\" ++ merge([labelStyle(~lineHeight, ~fontSize, ~mediaFontSize, ~mediaHoverFontSize)]);
",
  "RootStyleButton.elo.css": "._hxsbaq {
  background-color: red;
  padding-left: 10px;
  border: 0px
}

._hxsbaq_0-0 {
  background-color: red
}

._hxsbaq_0-0:hover {
  padding-left: 10px
}

._hxsbaq_0-0_1-0 {
  background-color: blue
}

._hxsbaq_1-1 {
  background-color: green
}",
  "RootStyleLabel.elo.css": "._87emqf:hover {
  color: red
}

._87emqf_0-1 {
  font-size: 16px
}

@media (min-width: 320px) and (max-width: 320px) {
  ._87emqf {
    color: green
  }
}

@media (min-width: 320px) and (max-width: 320px) {
  ._87emqf:hover {
    color: blue
  }
}",
  "_reset.elo.css": "._elo_view{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box}._elo_text{display:inline;overflow:visible}",
}
`;

exports[`Compiling to ReasonML should return a map of files in devMode 1`] = `
Object {
  "RootStyle.re": "[%bs.raw {|
  require(\\"./_reset.elo.css\\")
|}];

[%bs.raw {|
  require(\\"./RootStyleButton.elo.css\\")
|}];

[%bs.raw {|
  require(\\"./RootStyleLabel.elo.css\\")
|}];

open Css;

[@bs.deriving jsConverter]
type type_ =
  | Primary
  | Secondary;

[@bs.deriving jsConverter]
type mode =
  | Dark
  | Light
  | Semi;

let buttonStyle = (~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft) => style([unsafe(\\"border-width\\", borderWidth)]);
let getButtonStyleVariants = (~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft, ~type_, ~mode, ()) => {
    let buttonStylePrimary = style([unsafe(\\"padding-left\\", paddingLeft),
      hover([unsafe(\\"padding-right\\", paddingRight)])]);
    let buttonStylePrimaryDark = style([unsafe(\\"padding-left\\", padLeft)]);

switch (type_, mode) {
    | (Some(Primary), Some(Dark)) => [buttonStylePrimary,buttonStylePrimaryDark]
    | (Some(Primary), Some(Light)) => [buttonStylePrimary]
    | (Some(Primary), Some(Semi)) => [buttonStylePrimary]
    | (Some(Primary), None) => [buttonStylePrimary]
    | (Some(Secondary), Some(Dark)) => []
    | (Some(Secondary), Some(Light)) => []
    | (Some(Secondary), Some(Semi)) => []
    | (Some(Secondary), None) => []
    | (None, Some(Dark)) => []
    | (None, Some(Light)) => []
    | (None, Some(Semi)) => []
    | (None, None) => []
    }
  };

let getButtonVariants = (~type_, ~mode, ()) => {
  switch (type_, mode) {
    | (Some(Primary), Some(Dark)) => \\" Button_hxsbaq__Type_-Primary Button_hxsbaq__Mode-Dark Button_hxsbaq__Type_-Primary__Mode-Dark\\"
    | (Some(Primary), Some(Light)) => \\" Button_hxsbaq__Type_-Primary Button_hxsbaq__Mode-Light Button_hxsbaq__Type_-Primary__Mode-Light\\"
    | (Some(Primary), Some(Semi)) => \\" Button_hxsbaq__Type_-Primary Button_hxsbaq__Mode-Semi Button_hxsbaq__Type_-Primary__Mode-Semi\\"
    | (Some(Primary), None) => \\" Button_hxsbaq__Type_-Primary\\"
    | (Some(Secondary), Some(Dark)) => \\" Button_hxsbaq__Type_-Secondary Button_hxsbaq__Mode-Dark Button_hxsbaq__Type_-Secondary__Mode-Dark\\"
    | (Some(Secondary), Some(Light)) => \\" Button_hxsbaq__Type_-Secondary Button_hxsbaq__Mode-Light Button_hxsbaq__Type_-Secondary__Mode-Light\\"
    | (Some(Secondary), Some(Semi)) => \\"\\"
    | (Some(Secondary), None) => \\" Button_hxsbaq__Type_-Secondary\\"
    | (None, Some(Dark)) => \\" Button_hxsbaq__Mode-Dark\\"
    | (None, Some(Light)) => \\" Button_hxsbaq__Mode-Light\\"
    | (None, Some(Semi)) => \\" Button_hxsbaq__Mode-Semi\\"
    | (None, None) => \\"\\"
  }
};

let button = (~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft, ~type_=?, ~mode=?, ()) => \\"_elo_view Button_hxsbaq\\" ++ getButtonVariants(~type_, ~mode, ()) ++ \\" \\" ++ merge([buttonStyle(~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft), ...getButtonStyleVariants(~borderWidth, ~paddingLeft, ~paddingRight, ~padLeft, ~type_, ~mode, ())]);

let labelStyle = (~lineHeight, ~fontSize, ~mediaFontSize, ~mediaHoverFontSize) => style([unsafe(\\"line-height\\", lineHeight),
    hover([unsafe(\\"font-size\\", fontSize)]),
    media(\\"(min-width: 320px) and (max-width: 320px)\\", [unsafe(\\"font-size\\", mediaFontSize),
hover([unsafe(\\"font-size\\", mediaHoverFontSize)])])]);
let getLabelVariants = (~mode, ()) => {
  switch (mode) {
    | (Some(Dark)) => \\"\\"
    | (Some(Light)) => \\" Label_87emqf__Mode-Light\\"
    | (Some(Semi)) => \\"\\"
    | (None) => \\"\\"
  }
};

let label = (~lineHeight, ~fontSize, ~mediaFontSize, ~mediaHoverFontSize, ~mode=?, ()) => \\"_elo_text Label_87emqf\\" ++ getLabelVariants(~mode, ()) ++ \\" \\" ++ merge([labelStyle(~lineHeight, ~fontSize, ~mediaFontSize, ~mediaHoverFontSize)]);
",
  "RootStyleButton.elo.css": ".Button_hxsbaq {
  background-color: red;
  padding-left: 10px;
  border: 0px
}

.Button_hxsbaq__Type_-Primary {
  background-color: red
}

.Button_hxsbaq__Type_-Primary:hover {
  padding-left: 10px
}

.Button_hxsbaq__Type_-Primary__Mode-Dark {
  background-color: blue
}

.Button_hxsbaq__Mode-Light {
  background-color: green
}",
  "RootStyleLabel.elo.css": ".Label_87emqf:hover {
  color: red
}

.Label_87emqf__Mode-Light {
  font-size: 16px
}

@media (min-width: 320px) and (max-width: 320px) {
  .Label_87emqf {
    color: green
  }
}

@media (min-width: 320px) and (max-width: 320px) {
  .Label_87emqf:hover {
    color: blue
  }
}",
  "_reset.elo.css": "._elo_view{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box}._elo_text{display:inline;overflow:visible}",
}
`;
